--- a/arch/arx-libertatis-debug/PKGBUILD
+++ b/arch/arx-libertatis-debug/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=arx-libertatis-debug
 _installname=arx-libertatis
-pkgver=1.0_rc4
+pkgver=1.0
 pkgrel=1
 pkgdesc='Cross-platform port of Arx Fatalis, a first-person role-playing game (debug build)'
 url='http://arx-libertatis.org/'
