Remove Inno Setup versions from descriptions

--- a/deb/innoextract/debian/control
+++ b/deb/innoextract/debian/control
@@ -14,5 +14,4 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Tool to extract installers created by Inno Setup
  Inno Setup is a tool to create installers for Microsoft Windows applications.
  Inno Extracts allows one to extract such installers under non-windows systems
- without running the actual installer using wine. Inno Extract currently
- supports installers created by Inno Setup 1.2.10 to 5.4.3.
+ without running the actual installer using wine.
