Update innoextract website URLs

--- a/innoextract/arch/PKGBUILD
+++ b/innoextract/arch/PKGBUILD
@@ -5,7 +5,7 @@ _installname=innoextract
 pkgver=1.3
 pkgrel=1
 pkgdesc='A tool to extract installers created by Inno Setup'
-url='http://innoextract.constexpr.org/'
+url='http://constexpr.org/innoextract/'
 arch=('i686' 'x86_64')
 license=('ZLIB')
 depends=('boost' 'xz')
