--- a/innoextract/deb/debian/control
+++ b/innoextract/deb/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Daniel Scharrer <daniel@constexpr.org>
 Build-Depends: debhelper (>= 7.0.50), cmake (>= 2.8), libboost-dev, libboost-iostreams-dev , libboost-filesystem-dev, libboost-date-time-dev, libboost-system-dev, libboost-program-options-dev, liblzma-dev
 Standards-Version: 3.9.2
-Homepage: http://innoextract.constexpr.org/
+Homepage: http://constexpr.org/innoextract/
 Vcs-Git: git://github.com/dscharrer/InnoExtract.git
 Vcs-Browser: https://github.com/dscharrer/InnoExtract
 
