--- a/arx-libertatis/arch/PKGBUILD
+++ b/arx-libertatis/arch/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Daniel Scharrer <daniel@constexpr.org>
 
 pkgname=arx-libertatis
-pkgver=1.0.3
+pkgver=1.1
 pkgrel=1
-pkgdesc='Cross-platform port of Arx Fatalis, a first-person role-playing game'
+pkgdesc='Cross-platform port of Arx Fatalis, a first-person role-playing game (binaries only)'
 url='http://arx-libertatis.org/'
 arch=('i686' 'x86_64')
 license=('GPL3')
