--- a/arx-libertatis/arch/PKGBUILD
+++ b/arx-libertatis/arch/PKGBUILD
@@ -2,25 +2,23 @@
 
 pkgname=arx-libertatis
 pkgver=1.1
-pkgrel=1
+pkgrel=2
 pkgdesc='Cross-platform port of Arx Fatalis, a first-person role-playing game (binaries only)'
 url='http://arx-libertatis.org/'
 arch=('i686' 'x86_64')
 license=('GPL3')
-depends=('sdl' 'openal' 'freetype2' 'zlib' 'boost' 'glew' 'libgl')
+depends=('sdl' 'openal' 'freetype2' 'zlib' 'boost-libs' 'glew' 'libgl')
 optdepends=('qt: enable built-in crash handler (recompile needed)'
             'gdb: generate detailed crash reports')
-makedepends=('cmake')
+makedepends=('boost' 'cmake')
 provides=('arx')
 conflicts=('arx-git')
-options=()
-_pkgvername="${pkgname}-${pkgver}"
-source=("https://github.com/downloads/arx/ArxLibertatis/${_pkgvername}.tar.xz")
+source=("https://github.com/downloads/arx/ArxLibertatis/${pkgname}-${pkgver}.tar.xz")
 sha256sums=('5719e1602051f6a6dc13ac0366ff03804f914ffbd855e7e06fdeb0d065fb6d32')
 install='arx-libertatis.install'
 
 build() {
-	cd "${srcdir}/${_pkgvername}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 	
 	cmake . -DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_BUILD_TYPE=Release \
@@ -37,7 +35,7 @@ build() {
 }
 
 package() {
-	cd "${srcdir}/${_pkgvername}"
+	cd "${srcdir}/${pkgname}-${pkgver}"
 	
 	make DESTDIR="${pkgdir}" install
 	
