Update crossdev config and hacks

--- a/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
+++ b/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
@@ -9,13 +9,9 @@ ROOT=/usr/${CHOST}/
 
 ACCEPT_KEYWORDS="arm ~arm"
 
-USE="${ARCH} zlib bindist make-symlinks minimal static-libs -nls -classic -egl -gallium -llvm -shared-glapi -X -pulseaudio"
-
 CFLAGS="-Os -pipe -fomit-frame-pointer -flto -mfpu=vfp -mfloat-abi=hard"
 CXXFLAGS="${CFLAGS}"
-LDFLAGS="${LDFLAGS} -Wl,-rpath,\$ORIGIN"
 
-FEATURES="-collision-protect sandbox noman noinfo nodoc"
 # Be sure we dont overwrite pkgs from another repo..
 PKGDIR=${ROOT}packages/
 PORTAGE_TMPDIR=${ROOT}tmp/
@@ -23,9 +19,7 @@ PORTAGE_TMPDIR=${ROOT}tmp/
 ELIBC="glibc"
 
 PKG_CONFIG_PATH="${ROOT}usr/lib/pkgconfig/"
-#PORTDIR_OVERLAY="/usr/portage/local/"
-PORTDIR="/usr/portage"
-DISTDIR="/usr/portage/distfiles"
+
 PORTDIR_OVERLAY="/usr/local/portage /var/lib/layman/toolchain"
-MAKEOPTS="-j1"
-GENTOO_MIRRORS="http://distfiles.gentoo.org"
+
+VIDEO_CARDS="vesa"
