--- a/files/crossdev/usr/i686-bindist-linux-gnu/etc/portage/make.conf
+++ b/files/crossdev/usr/i686-bindist-linux-gnu/etc/portage/make.conf
@@ -9,13 +9,6 @@ ROOT=/usr/${CHOST}/
 
 ACCEPT_KEYWORDS="x86 ~x86"
 
-USE="${ARCH} zlib bindist make-symlinks minimal static-libs -nls -classic -egl -gallium -llvm -shared-glapi -X -pulseaudio"
-
-CFLAGS="-O2 -pipe -fomit-frame-pointer -flto"
-CXXFLAGS="${CFLAGS}"
-LDFLAGS="${LDFLAGS} -Wl,-rpath,\$ORIGIN"
-
-FEATURES="-collision-protect sandbox noman noinfo nodoc"
 # Be sure we dont overwrite pkgs from another repo..
 PKGDIR=${ROOT}packages/
 PORTAGE_TMPDIR=${ROOT}tmp/
@@ -23,9 +16,9 @@ PORTAGE_TMPDIR=${ROOT}tmp/
 ELIBC="glibc"
 
 PKG_CONFIG_PATH="${ROOT}usr/lib/pkgconfig/"
-#PORTDIR_OVERLAY="/usr/portage/local/"
-PORTDIR="/usr/portage"
-DISTDIR="/usr/portage/distfiles"
+
+#ABI_X86="32"
+
 PORTDIR_OVERLAY="/usr/local/portage /var/lib/layman/toolchain"
-MAKEOPTS=" -j5"
-GENTOO_MIRRORS="http://distfiles.gentoo.org"
+
+VIDEO_CARDS="vesa"
