--- a/files/crossdev/usr/i686-w64-mingw32/etc/portage/make.conf
+++ b/files/crossdev/usr/i686-w64-mingw32/etc/portage/make.conf
@@ -9,22 +9,16 @@ ROOT=/usr/${CHOST}/
 
 ACCEPT_KEYWORDS="x86 ~x86"
 
-USE="${ARCH} zlib bindist make-symlinks minimal static-libs -nls"
-
-CFLAGS="-O2 -pipe -fomit-frame-pointer -flto"
-CXXFLAGS="${CFLAGS}"
-
-FEATURES="-collision-protect sandbox noman noinfo nodoc"
 # Be sure we dont overwrite pkgs from another repo..
 PKGDIR=${ROOT}packages/
 PORTAGE_TMPDIR=${ROOT}tmp/
 
-ELIBC="__LIBC__"
+ELIBC="Winnt"
 
 PKG_CONFIG_PATH="${ROOT}usr/lib/pkgconfig/"
-#PORTDIR_OVERLAY="/usr/portage/local/"
-PORTDIR="/usr/portage"
-DISTDIR="/usr/portage/distfiles"
+
+ABI_X86="32"
+
 PORTDIR_OVERLAY="/usr/local/portage /var/lib/layman/toolchain"
-MAKEOPTS=" -j5"
-GENTOO_MIRRORS="http://distfiles.gentoo.org"
+
+VIDEO_CARDS="vesa"
