--- a/config
+++ b/config
@@ -38,10 +38,6 @@ exe_linker_flags+=(
 	-fvisibility=hidden
 	-fvisibility-inlines-hidden
 	
-	# Statically link the standard libraries
-	-static-libstdc++
-	-static-libgcc
-	
 )
 
 # Taret names for used architectures (see $architectures)
@@ -83,34 +79,6 @@ maximum_library_versions+=(
 	[glibc-armv6j-hardfloat]='2.14'
 )
 
-# Libraries that should not be linked
-forbidden_libraries+=(
-	
-	# GCC/C++ stuff - link statically
-	'libgcc*.so*'
-	'libgcc_*.dll'
-	'libstdc++.so*'
-	'libstdc++-*.dll'
-	'libc++.so*'
-	
-)
-
-# List of libraries to be referenced in project-specific configs
-all_libraries=(
-	
-	'libboost_*'
-	'libz.so*'
-	'zlib*.dll'
-	'libbz2.so*'
-	'liblzma.so*'
-	'liblzma-*.dll'
-	'libiconv.so*'
-	'libiconv-*.dll'
-	
-	'*'
-	
-)
-
 ################################################################################
 # Documentation output
 
@@ -128,6 +96,8 @@ licenses+=(
 	['/usr/include/boost/*']='Boost'
 	['/usr/lib/libboost_*']='Boost'
 	
+	['/usr/include/zconf.h']='zlib'
+	['/usr/include/zlib*']='zlib'
 	['/usr/lib/libz.*']='zlib'
 	
 	['/usr/lib/libbz2.*']='libbz2'
@@ -138,6 +108,20 @@ licenses+=(
 	
 	['/usr/include/iconv.h']='' # may come from glibc
 	['/usr/lib/libiconv.*']='libiconv'
+	
+	['/usr/include/AL/*']='OpenAL_Soft'
+	['/usr/lib/libopenal.*']='OpenAL_Soft'
+	
+	['/usr/include/GL/*']='' #interface only, no implementation
+	['/usr/lib/libGLEW*']='GLEW'
+	
+	['/usr/include/SDL/*']='SDL'
+	['/usr/lib/libSDL.so*']='SDL'
+	['/usr/lib/libSDL-1.2.so*']='SDL'
+	
+	['/usr/include/freetype*']='Freetype'
+	['/usr/lib/libfreetype.so*']='Freetype'
+	['/usr/include/ft2build.h']='Freetype'
 	
 )
 
