Add package config for Arx Libertatis

--- a/config
+++ b/config
@@ -125,6 +125,10 @@ licenses+=(
 	
 )
 
+provided_versioned_libraries+=(
+	'gcc'
+)
+
 ################################################################################
 # Deployment information
 
