Don't include libgcc version in requirements
We always either link with -static-libgcc or include libgcc*.so.

--- a/config
+++ b/config
@@ -126,7 +126,7 @@ licenses+=(
 )
 
 provided_versioned_libraries+=(
-	'gcc'
+	'gcc-*'
 )
 
 ################################################################################
