--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -36,6 +36,8 @@ cmake_options+=(
 	-DICONDIR='.'
 )
 
+inherit_projects+=( 'innoextract' )
+
 ################################################################################
 # Wrapper configuration
 
