--- a/scripts/config
+++ b/scripts/config
@@ -18,9 +18,11 @@
 # File locations
 
 # Don't build DEB and RPM packages for git snapshots
-is_test_version=0
-[[ "${version-}" != *.* ]]        && is_test_version=1
-[ "${version-}" != "${commit-}" ] && is_test_version=1
+if [ -z "${is_test_version:-}" ] ; then
+	is_test_version=0
+	[[ "${version-}" != *.* ]]        && is_test_version=1
+	[ "${version-}" != "${commit-}" ] && is_test_version=1
+fi
 
 # Where are project-specific test/input files stored?
 filesdir="$projectdir/files"
@@ -108,14 +110,19 @@ shared_linker_flags=(
 	-Wl,--as-needed
 	-Wl,--no-export-dynamic # note: the build scripts always removes any -rdynamic flags
 	
+)
+
+# Executable linker flags
+exe_linker_flags=( "${shared_linker_flags[@]}" )
+
+# Additional linker flags for *nix systems
+unix_linker_flags=(
+	
 	# Load libraries from the same directory
 	-Wl,-z,origin
 	-Wl,-rpath,\$ORIGIN
 	
 )
-
-# Executable linker flags
-exe_linker_flags=( "${shared_linker_flags[@]}" )
 
 # List of architectures to build binaries for
 declare -a architectures
@@ -233,6 +240,9 @@ test_binaries() { echo "no tests defined" ; }
 
 # Check that binaries have the correct RUNPATH set
 has_elf_rpath=0
+
+# Projects to copy binaries from
+inherit_projects=( )
 
 ################################################################################
 # Documentation output
