Tweak log output, generate checksums after source

--- a/scripts/build
+++ b/scripts/build
@@ -42,6 +42,7 @@ for script in "$scriptdir/build.d/"* ; do
 done
 
 # Create the binary tarball
+echo "  ${white}:: creating archive${reset}" >&2
 make_archive ${_out} "${_outdir}"
 
 echo >&2
