--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -20,6 +20,9 @@ project_downloads_url='http://wiki.arx-libertatis.org/Download'
 # URL for the full changelog (OPTIONAL)
 project_changelog_url='http://wiki.arx-libertatis.org/Changelog'
 
+# GPG key id to sign builds with - empty key disables signing
+sign_key='F87D7DF750859A5E' # release@arx-libertatis.org
+
 ################################################################################
 # Build configuration
 
