--- a/arx-libertatis/deb/control
+++ b/arx-libertatis/deb/control
@@ -2,7 +2,7 @@ Source: arx-libertatis
 Section: games
 Priority: extra
 Maintainer: Daniel Scharrer <daniel@constexpr.org>
-Build-Depends:  debhelper (>= 7.0.50), cmake (>= 2.8), libboost-dev (>= 1.39), zlib1g-dev, libsdl1.2-dev, libfreetype6-dev, libopenal-dev, mesa-common-dev, libgl1-mesa-dev, libglew-dev, libqt4-dev
+Build-Depends:  debhelper (>= 7.0.50), cmake (>= 2.8), libboost-dev (>= 1.39), ibglm-dev, zlib1g-dev, libsdl1.2-dev, libfreetype6-dev, libopenal-dev, mesa-common-dev, libgl1-mesa-dev, libglew-dev, libqt4-dev
 Standards-Version: 3.9.3
 Homepage: http://arx-libertatis.org/
 Vcs-Git: git://github.com/arx/ArxLibertatis.git
