--- a/config
+++ b/config
@@ -96,6 +96,8 @@ licenses+=(
 	['/usr/include/boost/*']='Boost'
 	['/usr/lib/libboost_*']='Boost'
 	
+	['/usr/include/glm/*']='GLM'
+	
 	['/usr/include/zconf.h']='zlib'
 	['/usr/include/zlib*']='zlib'
 	['/usr/lib/libz.*']='zlib'
