arx-libertatis: Disable runtime libexec dir

--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -39,6 +39,7 @@ cmake_options+=(
 	-DICONDIR='.'
 	-DINSTALL_DATADIR='data'
 	-DWITH_SDL=2
+	-DRUNTIME_LIBEXECDIR=''
 )
 
 inherit_projects+=( 'innoextract' )
