--- a/arx-libertatis/deb/rules
+++ b/arx-libertatis/deb/rules
@@ -7,7 +7,7 @@
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
-		-DUSE_QT5=OFF \
+		-DWITH_QT=4 \
 		-DUNITY_BUILD=ON \
 		-DCMAKE_INSTALL_LIBEXECDIR=lib/arx \
 		-DGAMESBINDIR=games
