Support projects without a VERSION file

--- a/scripts/source/build
+++ b/scripts/source/build
@@ -29,28 +29,29 @@ e git --git-dir="$_repodir" --work-tree="$_outdir" checkout "$commit" -f 2>&1
 e find "$_outdir" -name '.*' -exec rm -rvf {} \;
 
 _version_file="${_outdir}/VERSION"
-[ -f "$_version_file" ] || die 'missing version file'
-if [ $is_test_version = 0 ] ; then
-	# Check version number for stable releases
-	_vername="$(head --lines=1 "$_version_file")"
-	_version="${_vername##* }"
-	[ "$version" = "$_version" ] || die "version file says ${_vername}"
-	for changelog in "${_outdir}/"*CHANGELOG* ; do
-		grep "$(escape_sed "$version")" "$changelog" > /dev/null \
-			|| die "version ${version} not in ${changelog}"
-	done
-else
-	# Adjust version for test/patch releases
-	_vername="$(head --lines=1 "$_version_file")"
-	if [[ "${version-}" == *.* ]]
-		then _vername="${_vername% *} ${version}"
-		else _vername="${_vername}+${version}"
-	fi
-	_rest="$(tail -n+2 "$_version_file")"
-	[ ! -z "$_rest" ] && _vername="$_vername
+if [ -f "$_version_file" ] ; then
+	if [ $is_test_version = 0 ] ; then
+		# Check version number for stable releases
+		_vername="$(head --lines=1 "$_version_file")"
+		_version="${_vername##* }"
+		[ "$version" = "$_version" ] || die "version file says ${_vername}"
+		for changelog in "${_outdir}/"*CHANGELOG* ; do
+			grep "$(escape_sed "$version")" "$changelog" > /dev/null \
+				|| die "version ${version} not in ${changelog}"
+		done
+	else
+		# Adjust version for test/patch releases
+		_vername="$(head --lines=1 "$_version_file")"
+		if [[ "${version-}" == *.* ]]
+			then _vername="${_vername% *} ${version}"
+			else _vername="${_vername}+${version}"
+		fi
+		_rest="$(tail -n+2 "$_version_file")"
+		[ ! -z "$_rest" ] && _vername="$_vername
 $_rest"
-	echo "$_vername" > "$_version_file"
+		echo "$_vername" > "$_version_file"
+	fi
 fi
 
 # Build the source tarball
-e make_archive "$_out" "$_outdir"
+e make_archive "$_out" "$_outdir" || die fail
