--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -50,11 +50,8 @@ inherit_projects+=( 'innoextract' )
 # Set ${command}_COMMAND to the string used to invoke the wrapper script
 wrapper_use_command=1
 
-# Set arx_PATH to Add the package root as a potential data directory
+# Set arx_PATH to overwrite the real binary location in the data path selection
 wrapper_use_cmd_path=1
-
-# What to set ${command}_PATH to ($here is the directory containing the wrapper script)
-wrapper_cmd_path='$here/data'
 
 copy_files+=(
 	
