crossdev: Update config for GCC 4.9

--- a/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
+++ b/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
@@ -9,7 +9,7 @@ ROOT=/usr/${CHOST}/
 
 ACCEPT_KEYWORDS="arm ~arm"
 
-CFLAGS="-Os -pipe -fomit-frame-pointer -flto -mfpu=vfp -mfloat-abi=hard"
+CFLAGS="-Os -pipe -fomit-frame-pointer -flto -ffat-lto-objects -mfpu=vfp -mfloat-abi=hard"
 CXXFLAGS="${CFLAGS}"
 
 # Be sure we dont overwrite pkgs from another repo..
