Add patches and fixes for OpenAL Soft 1.16

--- a/files/crossdev/usr/i686-w64-mingw32/etc/portage/make.conf
+++ b/files/crossdev/usr/i686-w64-mingw32/etc/portage/make.conf
@@ -13,6 +13,7 @@ ACCEPT_KEYWORDS="x86 ~x86"
 PKGDIR=${ROOT}packages/
 PORTAGE_TMPDIR=${ROOT}tmp/
 
+KERNEL="Winnt"
 ELIBC="Winnt"
 
 PKG_CONFIG_PATH="${ROOT}usr/lib/pkgconfig/"
