crossdev: Use function sections

--- a/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
+++ b/files/crossdev/usr/armv6j-hardfloat-linux-gnueabi/etc/portage/make.conf
@@ -9,8 +9,9 @@ ROOT=/usr/${CHOST}/
 
 ACCEPT_KEYWORDS="arm ~arm"
 
-CFLAGS="-Os -pipe -fomit-frame-pointer -flto -ffat-lto-objects -mfpu=vfp -mfloat-abi=hard"
+CFLAGS="-Os -pipe -fomit-frame-pointer -flto -ffat-lto-objects -mfpu=vfp -mfloat-abi=hard -ffunction-sections -fdata-sections"
 CXXFLAGS="${CFLAGS}"
+LDFLAGS="${LDFLAGS} -Os -flto -fuse-linker-plugin -Wl,-O1 -Wl,--as-needed -ffunction-sections -fdata-sections -Wl,--gc-sections"
 
 # Be sure we dont overwrite pkgs from another repo..
 PKGDIR=${ROOT}packages/
