--- a/scripts/build
+++ b/scripts/build
@@ -11,6 +11,7 @@ create_wrapper_scripts="${create_wrapper_scripts:-1}"
 objdump_lib_pattern="${objdump_lib_pattern:-" NEEDED "}"
 exe_suffix="${exe_suffix-}"
 text_suffix="${text_suffix-}"
+allow_symlinks="${allow_symlinks:-1}"
 
 # Remove obsolete test results
 _phony="${builddir}/done/${project}-${version}-${pkgtype}-test"
