Copy resources to launcher executables

--- a/scripts/build
+++ b/scripts/build
@@ -27,6 +27,7 @@ popd
 
 # Set output directories
 get_output _out _outdir
+buildroot="${PWD}"
 outdir="${PWD}/${_outdir}"
 bindir="${outdir}/bin"
 mandir="${outdir}/doc"
