--- a/scripts/config
+++ b/scripts/config
@@ -255,6 +255,8 @@ system_libraries=(
 	
 )
 
+env_separator=':'
+
 ################################################################################
 # Sanity checks
 
