Don't include commit hash in snapshot file names

--- a/scripts/source/build
+++ b/scripts/source/build
@@ -42,9 +42,16 @@ if [ -f "$_version_file" ] ; then
 	else
 		# Adjust version for test/patch releases
 		_vername="$(head --lines=1 "$_version_file")"
-		if [[ "${version-}" == *.* ]] || [ $is_snapshot = 1 ]
-			then _vername="${_vername% *} ${version}"
-			else _vername="${_vername}+${version}"
+		_commit="$(git --git-dir="$_repodir" rev-parse --short=5 "$commit")"
+		if [[ "${version-}" == *.* ]] || [ $is_snapshot = 1 ] ; then
+			_vername="${_vername% *} ${version} + ${_commit}"
+		else
+			if [ ! "$version" = "$commit" ] || [ ! "$version" = "$_commit" ] ; then
+				_vername+="-${version}"
+			fi
+			if [ "$version" = "$commit" ] ; then
+				_vername+=" + ${_commit}"
+			fi
 		fi
 		_rest="$(tail -n+2 "$_version_file")"
 		[ ! -z "$_rest" ] && _vername="$_vername
